--- a/src/mail/templates/confirmation.hbs
+++ b/src/mail/templates/confirmation.hbs
@@ -1,4 +1,4 @@
-<h1>Hello! Dear {{name}}</h1>
+<h1>Hello! Dear {{name}},</h1>
 <h2>Please click below to confirm your email</h2>
 <p>
     <a href="{{url}}">Confirm</a>
